fixed most of the syntax issues, hopefully it will compile on the RPi