@@ -1,5 +1,13 @@
 import java.security.SecureRandom;
-import java.utils.Arrays;
+import javax.crypto.spec.PBEKeySpec;
+import javax.crypto.SecretKeyFactory;
+import java.util.Random;
+import java.util.HashSet;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Set;
+import java.util.HashMap;
+import java.util.Map;
 
 
 /*
@@ -8,10 +16,12 @@ import java.utils.Arrays;
  *   user registration
  *   user chat groups (broadcast to everyone in the group)
  */
-public class UserAuthentication {
+public class UserAuthentication implements AuthStorage {
   
   private static final int ITERATIONS = 10000;
   private static final int KEYLENGTH = 128;
+  private static Map<String, UserWithPassword> authDatabase; // maps from username to UserStorage 
+
   // username should be unique
   // password should be hashed 
   public class User {
@@ -19,11 +29,15 @@ public class UserAuthentication {
     private Set<Integer> groups;
   
     public void addGroup(int groupId) {
-      groups.add(new Integer(groupId));
+      groups.add(Integer.valueOf(groupId));
     }
 
     public Set<Integer> getGroups() {
       return this.groups;
+    }
+
+    public boolean isInGroup(int groupId) {
+      return groups.contains(Integer.valueOf(groupId));
     }
 
     public String getUsername() {
@@ -36,11 +50,11 @@ public class UserAuthentication {
     }
   }
   
-  private class UserWithPassword {
-    private static final User user; 
-    private static final byte[] passwordHash;
-    private static final byte[] salt;
-    private static final Random random;
+  private static class UserWithPassword {
+    private static User user; 
+    private static byte[] passwordHash;
+    private static byte[] salt;
+    private static Random random;
 
     private boolean isVerifiedUser(String username, String password) {
       if (username != user.getUsername()) {
@@ -49,24 +63,32 @@ public class UserAuthentication {
       return Arrays.equals(generateHash(password), passwordHash);
     }
 
-    private static byte[] generateHash(String password) {
-      KeySpec spec = new PBEKeySpec(password.toCharArray(), salt, ITERATIONS, KEYLENGTH);
+    private byte[] generateHash(String password) {
+      PBEKeySpec spec = new PBEKeySpec(password.toCharArray(), salt, ITERATIONS, KEYLENGTH);
       try {
         SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA1");
         passwordHash = factory.generateSecret(spec).getEncoded();
         return passwordHash;
-      } catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
+      } catch (Exception e) {
         throw new AssertionError("Error while hashing a password: " + e.getMessage(), e);
       } finally {
         spec.clearPassword();
       }
     }
 
-    private User getUser() {
+    public User getUser() {
       return user;
     }
 
-    private UserWithPassword(User user, String password) {
+    public void updateUser(User user) {
+      this.user = user;
+    }
+
+    public static boolean isInGroup(int groupId) {
+      return user.isInGroup(groupId);
+    }
+
+    public UserWithPassword(User user, String password) {
       this.user = user;
       random = new SecureRandom();
       salt = new byte[16];
@@ -74,27 +96,41 @@ public class UserAuthentication {
       passwordHash = generateHash(password);
     }
   }
-  // maps from username to UserStorage 
-  private Map<String, UserWithPassword> authDatabase;
   
-  // TODO: implement these two functions 
   public boolean isVerifiedGroupMember(String username, int groupId) {
-
+    UserWithPassword user = authDatabase.get(username);
+    if (user == null) {
+      return false;
+    } else {
+      return user.isInGroup(groupId); 
+    }
   }
 
   public void updateNewGroupInfo(Integer groupId, List<String> usernameList) {
-
+    for (String username: usernameList) {
+      UserWithPassword userContainer = authDatabase.get(username);
+      if (userContainer == null) {
+        // TODO: keep meta data for users that don't exist yet 
+        continue;
+      } 
+      if (authDatabase.containsKey(username)) {
+        User user = authDatabase.get(username).getUser();
+        user.addGroup(Integer.valueOf(groupId));
+        userContainer.updateUser(user);
+        authDatabase.put(username, userContainer);
+      }
+    }
   }
 
   public User loginOrRegister(String username, String password) {
-    byte[] passwordHash = generateHash(password);
     UserWithPassword userInStorage = authDatabase.get(username);
 
     // register new user 
     if (userInStorage == null) {
       System.out.println("Registering new user with id: "+username);
+      // TODO: look up the group info 
       UserWithPassword newUser = new UserWithPassword(new User(username), password);
-      authDatabase.put(newUser);
+      authDatabase.put(username, newUser);
       return newUser.getUser();
     }
 
@@ -106,11 +142,7 @@ public class UserAuthentication {
     }
   }
 
-  public List<String> getGroupUsers(int groupId);
-  public int createGroup(List<String> userIdList);
-
   public UserAuthentication() {
     authDatabase = new HashMap<String, UserWithPassword>();
-    SecureRandom random = new SecureRandom();
   }
 }
